src/test/deca/syntax/valid/created/class_method_param_instruction.deca
class A{
	int methodA(int a){
		int a = 5;
	}
}
