src/test/deca/syntax/invalid/created/faux50.deca
class A{
	protected int protected = 5;
}

{}
